--- a/night-transition/night-transition.css
+++ b/night-transition/night-transition.css
@@ -1,9 +1,12 @@
 body{
     animation: sunset 2s linear;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 90vh;
+    gap: 15px;
 }
 
 img{
@@ -16,7 +19,6 @@ img{
 
 a{
     z-index: 50;
-    position: absolute;
 }
 
 @keyframes sunset {
@@ -39,19 +41,19 @@ a{
        transform: translateY(-500px) scale(0.30);
     }
     10%{
-        transform: translateY(-190px) scale(0.30);
+        transform: translateY(-140px) scale(0.30);
     }
     22%{
-        transform: translateY(-220px) scale(0.30);
+        transform: translateY(-180px) scale(0.30);
     }
     35%{
-        transform: translateY(-195px) scale(0.30);
+        transform: translateY(-155px) scale(0.30);
     }
     55%{
-        transform: translateY(-210px) scale(0.30);
+        transform: translateY(-170px) scale(0.30);
     }
     90%{
-        transform: translateY(-200px) scale(0.30);
+        transform: translateY(-160px) scale(0.30);
     }
     100%{
         transform: translateY(-500px) scale(0.30);
